add block level leaf pruning (#228)
Signed-off-by: Christopher Peck <peck@uber.com>